@@ -245,6 +245,8 @@ Release 0.21.0 - Unreleased
    HBASE-2059  Break out WAL reader and writer impl from HLog
    HBASE-2060  Missing closing tag in mapreduce package info (Lars George via
                Andrew Purtell)
+   HBASE-2028  Add HTable.incrementColumnValue support to shell (Lars George
+               via Andrew Purtell)
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
